blinker - Added theme switching - still need to define colors.

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -7,26 +7,20 @@
     </configSections>
     <userSettings>
         <LinkerPlayer.Properties.Settings>
-            <setting name="DownloadsFolder" serializeAs="String">
-                <value />
+            <setting name="SelectedTheme" serializeAs="String">
+                <value>0</value>
             </setting>
             <setting name="VisualizationEnabled" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="MicOutputEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="AdditionalOutputEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="MainVolumeSliderValue" serializeAs="String">
-                <value>50</value>
-            </setting>
-            <setting name="MicVolumeSliderValue" serializeAs="String">
-                <value>50</value>
+                <value>0</value>
             </setting>
             <setting name="AdditionalVolumeSliderValue" serializeAs="String">
-                <value>50</value>
+                <value>0</value>
             </setting>
             <setting name="LastSelectedPlaylistName" serializeAs="String">
                 <value />
@@ -44,7 +38,7 @@
                 <value>0</value>
             </setting>
             <setting name="MinimizeToTrayEnabled" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="MainOutputDevice" serializeAs="String">
                 <value />
@@ -53,24 +47,18 @@
                 <value />
             </setting>
             <setting name="PlayPauseHotkey" serializeAs="String">
-                <value>Space</value>
-            </setting>
-            <setting name="NextSongHotkey" serializeAs="String">
-                <value>Down</value>
-            </setting>
-            <setting name="PreviousSongHotkey" serializeAs="String">
-                <value>Up</value>
-            </setting>
-            <setting name="IncreaseMainVolumeHotkey" serializeAs="String">
-                <value>OemPlus</value>
-            </setting>
-            <setting name="DecreaseMainVolumeHotkey" serializeAs="String">
-                <value>OemMinus</value>
-            </setting>
-            <setting name="InputDevice" serializeAs="String">
                 <value />
             </setting>
-            <setting name="MicOutputDevice" serializeAs="String">
+            <setting name="NextSongHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PreviousSongHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IncreaseMainVolumeHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DecreaseMainVolumeHotkey" serializeAs="String">
                 <value />
             </setting>
             <setting name="EqualizerOnStartEnabled" serializeAs="String">
