blinker - Themes WIP

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -67,6 +67,9 @@
             <setting name="EqualizerBandName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="FontSize" serializeAs="String">
+                <value>9</value>
+            </setting>
         </LinkerPlayer.Properties.Settings>
     </userSettings>
 </configuration>
