--- a/LinkerPlayer/Properties/Settings.settings
+++ b/LinkerPlayer/Properties/Settings.settings
@@ -62,5 +62,8 @@
     <Setting Name="EqualizerBandName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FontSize" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">9</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
