--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <LinkerPlayer.Properties.Settings>
             <setting name="SelectedTheme" serializeAs="String">
-                <value>0</value>
+                <value>Dark</value>
             </setting>
             <setting name="VisualizationEnabled" serializeAs="String">
                 <value>False</value>
