blinker - Worked on Player buttons and icons. Rounded sliders.

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -16,7 +16,7 @@
             <setting name="AdditionalOutputEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="MainVolumeSliderValue" serializeAs="String">
+            <setting name="VolumeSliderValue" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="AdditionalVolumeSliderValue" serializeAs="String">
