--- a/LinkerPlayer/Properties/Settings.settings
+++ b/LinkerPlayer/Properties/Settings.settings
@@ -11,7 +11,7 @@
     <Setting Name="AdditionalOutputEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="MainVolumeSliderValue" Type="System.Double" Scope="User">
+    <Setting Name="VolumeSliderValue" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="AdditionalVolumeSliderValue" Type="System.Double" Scope="User">
