blinker - Fixed preloading for LastSelectedTrack and other settings.

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -19,13 +19,7 @@
             <setting name="VolumeSliderValue" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="AdditionalVolumeSliderValue" serializeAs="String">
-                <value>0</value>
-            </setting>
             <setting name="LastSelectedPlaylistName" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LastBackgroundPlaylistName" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastSelectedSongId" serializeAs="String">
@@ -69,6 +63,12 @@
             </setting>
             <setting name="FontSize" serializeAs="String">
                 <value>9</value>
+            </setting>
+            <setting name="AdditionalVolumeSliderValue" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ShuffleMode" serializeAs="String">
+                <value>False</value>
             </setting>
         </LinkerPlayer.Properties.Settings>
     </userSettings>
