--- a/LinkerPlayer/Properties/Settings.settings
+++ b/LinkerPlayer/Properties/Settings.settings
@@ -14,13 +14,7 @@
     <Setting Name="VolumeSliderValue" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="AdditionalVolumeSliderValue" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
     <Setting Name="LastSelectedPlaylistName" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="LastBackgroundPlaylistName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="LastSelectedSongId" Type="System.String" Scope="User">
@@ -64,6 +58,12 @@
     </Setting>
     <Setting Name="FontSize" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">9</Value>
+    </Setting>
+    <Setting Name="AdditionalVolumeSliderValue" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="ShuffleMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
