blinker - Worked some on the Equalizer - more to do. Now restoring last open tab and selected song in all tabs.

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -58,8 +58,8 @@
             <setting name="EqualizerOnStartEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="EqualizerBandName" serializeAs="String">
-                <value />
+            <setting name="EqualizerProfileName" serializeAs="String">
+                <value>Flat</value>
             </setting>
             <setting name="FontSize" serializeAs="String">
                 <value>9</value>
