blinker - Fixed bug in the shuffleMode/shuffleList.

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -49,6 +49,21 @@
             <setting name="VisualizationEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PlayPauseHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="NextSongHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PreviousSongHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IncreaseMainVolumeHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DecreaseMainVolumeHotkey" serializeAs="String">
+                <value />
+            </setting>
         </LinkerPlayer.Properties.Settings>
     </userSettings>
 </configuration>
