blinker - Changed all references to "song" to "track".

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -16,7 +16,7 @@
             <setting name="LastSelectedPlaylistName" serializeAs="String">
                 <value />
             </setting>
-            <setting name="LastSelectedSongId" serializeAs="String">
+            <setting name="LastSelectedTrackId" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastSeekBarValue" serializeAs="String">
@@ -52,10 +52,10 @@
             <setting name="PlayPauseHotkey" serializeAs="String">
                 <value />
             </setting>
-            <setting name="NextSongHotkey" serializeAs="String">
+            <setting name="NextTrackHotkey" serializeAs="String">
                 <value />
             </setting>
-            <setting name="PreviousSongHotkey" serializeAs="String">
+            <setting name="PreviousTrackHotkey" serializeAs="String">
                 <value />
             </setting>
             <setting name="IncreaseMainVolumeHotkey" serializeAs="String">
