--- a/LinkerPlayer/Properties/Settings.settings
+++ b/LinkerPlayer/Properties/Settings.settings
@@ -11,7 +11,7 @@
     <Setting Name="LastSelectedPlaylistName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="LastSelectedSongId" Type="System.String" Scope="User">
+    <Setting Name="LastSelectedTrackId" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="LastSeekBarValue" Type="System.Double" Scope="User">
@@ -47,10 +47,10 @@
     <Setting Name="PlayPauseHotkey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="NextSongHotkey" Type="System.String" Scope="User">
+    <Setting Name="NextTrackHotkey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="PreviousSongHotkey" Type="System.String" Scope="User">
+    <Setting Name="PreviousTrackHotkey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="IncreaseMainVolumeHotkey" Type="System.String" Scope="User">
