--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -11,7 +11,7 @@
                 <value>Dark</value>
             </setting>
             <setting name="VolumeSliderValue" serializeAs="String">
-                <value>0</value>
+                <value>50</value>
             </setting>
             <setting name="LastSelectedPlaylistName" serializeAs="String">
                 <value />
@@ -63,6 +63,9 @@
             </setting>
             <setting name="DecreaseMainVolumeHotkey" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="LastSelectedTabIndex" serializeAs="String">
+                <value>0</value>
             </setting>
         </LinkerPlayer.Properties.Settings>
     </userSettings>
