--- a/LinkerPlayer/Properties/Settings.settings
+++ b/LinkerPlayer/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">Dark</Value>
     </Setting>
     <Setting Name="VolumeSliderValue" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">50</Value>
     </Setting>
     <Setting Name="LastSelectedPlaylistName" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -58,6 +58,9 @@
     </Setting>
     <Setting Name="DecreaseMainVolumeHotkey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="LastSelectedTabIndex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
