Stubbed out OutputMode combobox in SettingsWindow. Added OutputMode enum.

--- a/LinkerPlayer/App.config
+++ b/LinkerPlayer/App.config
@@ -28,7 +28,7 @@
             <setting name="MinimizeToTrayEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="MainOutputDevice" serializeAs="String">
+            <setting name="SelectedOutputDevice" serializeAs="String">
                 <value />
             </setting>
             <setting name="AdditionalOutputDevice" serializeAs="String">
