--- a/LinkerPlayer/LinkerPlayer.csproj
+++ b/LinkerPlayer/LinkerPlayer.csproj
@@ -11,30 +11,28 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Include="ControlzEx" Version="7.0.1" />
 		<PackageReference Include="MahApps.Metro.IconPacks" Version="6.1.0" />
-		<PackageReference Include="ManagedBass" Version="4.0.0" />
-		<PackageReference Include="ManagedBass.Fx" Version="4.0.0" />
-		<PackageReference Include="ManagedBass.Mix" Version="4.0.0" />
-		<PackageReference Include="ManagedBass.Wasapi" Version="4.0.0" />
-		<PackageReference Include="MaterialDesignThemes" Version="5.2.2-ci942" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		<PackageReference Include="ManagedBass" Version="4.0.2" />
+		<PackageReference Include="ManagedBass.Fx" Version="4.0.2" />
+		<PackageReference Include="ManagedBass.Mix" Version="4.0.2" />
+		<PackageReference Include="ManagedBass.Wasapi" Version="4.0.2" />
+		<PackageReference Include="MaterialDesignThemes" Version="5.3.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="PlaylistsNET" Version="1.4.1" />
 		<PackageReference Include="RestoreWindowPlace" Version="3.1.0" />
 		<PackageReference Include="runtime.native.System.Net.Http" Version="4.3.1" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
-		<PackageReference Include="TagLibSharp" Version="2.3.0" />
-	</ItemGroup>
+		<PackageReference Include="TagLibSharp" Version="2.3.0" />	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\LinkerPlayer.BassLibs\LinkerPlayer.BassLibs.csproj" />
